leJOS 1.0.4:
------------

  Juergen Stuber has added:
  - serial listeners

leJOS 1.0.3:
-----------

  Paul Andrews has added:
  - Fixed application download code. Fewer hangs now.
  - Added experimental USB support to firmdl and lejosrun. Set RCXTTY
    to 'usb'.
  - Added progress indicator to lejosrun.
  - Fixed uninitialised variable and boundary condition in
    interpreter that could have prevented task switching.
  - All input listeners now use one thread.
  - Added Proximity Sensor Class
  - Added Servo class
  - Added more accessor methods to sensor and motor classes.
  
  Juergen Stuber has added:
  - LCDConstants.java
  - idle_hook() in interpreter

leJOS 1.0.2:
------------

  Paul Andrews has added:
  - Added Runtime class so that heap size and free memory can be
    returned.
  - Added Object.wait()/notify()
  - Added thread priorities. Scheduler will always run threads
    of a greater priority in preference to those of a lower priority.
  - Added daemon threads.
  - Added ability to interrupt sleeping/waiting threads.
  - Added System.exit().
  - Added a 'Poll' class to monitor changes of sensors and buttons in
    the VM (i.e. a call that blocks until a state change occurs).
  - Changed Sensor and Button listeners to use Poll.
  - Changed Sensor and Button listener threads to be daemon threads.
  - Modified 'View' example to update display whenever a sensor state
    changes rather than only when a button is pressed.
  - Modified native method name mangler so that native methods can
    be overloaded.
  - Added default constructor to StringBuffer so that expressions of the
    form "string1" + "string2" will compile.
  - Added several new exceptions to support all of the above.
  - Added the 'final' keyword to API classes where Java 2 normally has it.
  - Added Test class for performing assertions.
  - Fixed bug in memory allocator that failed to detect a full heap.
  - Added subsumption architcture examples using old and new threading.